Reorganization in progress

--- a/index-solar.html
+++ b/index-solar.html
@@ -8,7 +8,7 @@
 
 <body>
   <canvas id="solar-canvas" width="1900" height="860"></canvas>
-  <script src="js/script-solar.js"></script>
+  <script src="main.js"></script>
 </body>
 
 </html>
