--- a/index-solar.html
+++ b/index-solar.html
@@ -10,6 +10,9 @@
   <canvas id="solar-canvas" width="1920" height="1080"></canvas>
   <script src="loadJSON.js"></script>
   <script src="main.js"></script>
+  <!-->
+  <script src="animate.js"></script>
+  <-->
 </body>
 
 </html>
