--- a/index.html
+++ b/index.html
@@ -1,13 +1,14 @@
 <!DOCTYPE HTML>
-<html lang="en" style="background-color:black">
+<html>
 
 <head>
   <meta charset="utf-8" />
+  <link rel="stylesheet" href="main-style.css" />
   <title>Sol4r Syst3m</title>
 </head>
 
 <body>
-  <canvas id="solar-canvas" width="1900" height="1059"></canvas>
+  <canvas id="solar-canvas" width="1800px" height="800px"></canvas>
   <script src="loadJSON.js"></script>
   <script src="main.js"></script>
 </body>
