Added audio player

--- a/index.html
+++ b/index.html
@@ -8,6 +8,9 @@
 </head>
 
 <body>
+  <audio controls>
+    <source src="" type="audio/mpeg">
+  </audio>
   <canvas id="solar-canvas" width="1860px" height="860px"></canvas>
   <script src="loadJSON.js"></script>
   <script src="main.js"></script>
