oop ecma6 begin

--- a/index.html
+++ b/index.html
@@ -4,12 +4,11 @@
 <head>
   <meta charset="utf-8" />
   <link rel="stylesheet" href="main-style.css" />
-  <title>Sol4r Syst3m</title>
+  <title>OOP Solar system</title>
 </head>
 
 <body>
   <canvas id="solar-canvas" width="1860px" height="860px"></canvas>
-  <script src="loadJSON.js"></script>
   <script src="main.js"></script>
 </body>
 
