--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8" />
   <link rel="stylesheet" href="main-style.css" />
-  <title>Sol4r Syst3m</title>
+  <title>solarJS</title>
 </head>
 
 <body>
