Planet and Star classes, instanciations of sun, mercury, venus. Draw methods ok. Animate function ok. Loop through planets array ok

--- a/index.html
+++ b/index.html
@@ -3,12 +3,19 @@
 
 <head>
   <meta charset="utf-8" />
+  <link href="https://fonts.googleapis.com/css?family=Chakra+Petch" rel="stylesheet">
   <link rel="stylesheet" href="main-style.css" />
   <title>OOP Solar system</title>
 </head>
 
 <body>
-  <canvas id="solar-canvas" width="1860px" height="860px"></canvas>
+  <nav>
+    <p>welcome to space</p>
+    <audio controls>
+      <source src="" type="audio/mpeg">
+    </audio>
+  </nav>
+  <canvas id="solar-canvas" width="1800px" height="900px"></canvas>
   <script src="main.js"></script>
 </body>
 
