Cosmetic of nav

--- a/index.html
+++ b/index.html
@@ -14,8 +14,14 @@
     <audio controls>
       <source src="" type="audio/mpeg">
     </audio>
+    <ul>
+      <li>earth x-position<div id="display_earthPosX"></div>
+      </li>
+      <li>earth y-position<div id="display_earthPosY"></div>
+      </li>
+    </ul>
   </nav>
-  <canvas id="solar-canvas" width="1800px" height="900px"></canvas>
+  <canvas id="solar-canvas" width="1800px" height="1000px"></canvas>
   <script src="main.js"></script>
 </body>
 
