--- a/index.html
+++ b/index.html
@@ -2,15 +2,15 @@
 <html>
 
 <head>
-  <meta charset="utf-8" />
-  <link href="https://fonts.googleapis.com/css?family=Chakra+Petch" rel="stylesheet">
-  <link rel="stylesheet" href="main-style.css" />
-  <title>solarJS</title>
+	<meta charset="utf-8" />
+	<link href="https://fonts.googleapis.com/css?family=Chakra+Petch" rel="stylesheet">
+	<link rel="stylesheet" href="main-style.css" />
+	<title>solarJS</title>
 </head>
 
 <body>
-  <canvas id="solar-canvas" width="1900px" height="860px"></canvas>
-  <script src="main.js"></script>
+	<canvas id='solar-canvas' width='1900px' height='650px'></canvas>
+	<script src="main.js"></script>
 </body>
 
 </html>
