Main: inheritance for planets, moons, star => base class is SpaceObject()

--- a/index.html
+++ b/index.html
@@ -3,14 +3,13 @@
 
 <head>
 	<meta charset="utf-8" />
-	<link href="https://fonts.googleapis.com/css?family=Chakra+Petch" rel="stylesheet">
-	<link rel="stylesheet" href="main-style.css" />
+	<link rel="stylesheet" href="style/main.css">
 	<title>solarJS</title>
 </head>
 
 <body>
 	<canvas id='solar-canvas' width='1500px' height='650px'></canvas>
-	<script src="main.js"></script>
+	<script src="src/main.js"></script>
 </body>
 
 </html>
