Json data file rename, main js syntax format.

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
 	<meta charset="utf-8" />
 	<link rel="stylesheet" href="style/main.css">
-	<title>solarJS</title>
+	<title>Simple Solar System</title>
 </head>
 
 <body>
